hopefulyyyyy the lassst test

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "type-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://amitis-star.github.io/LPA-3-firstP",
+  "homepage": "https://amitis-star.github.io/LPA-3-firstP/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
